--- a/idp_app/pubspec.yaml
+++ b/idp_app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_auth: ^0.15.0+1
   cloud_firestore: ^0.12.10+2
   flutter_login: ^1.0.4
+  provider: ^3.2.0
   flutter:
     sdk: flutter
 
