--- a/idp_app/pubspec.yaml
+++ b/idp_app/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cloud_firestore: ^0.12.10+2
   flutter_login: ^1.0.4
   provider: ^3.2.0
+  flutter_spinkit: ^4.1.1+1
   flutter:
     sdk: flutter
 
